# SOAR

./: CMakeLists.txt  Documents - Shortcut.lnk  README.md  SOAR.kicad_pcb  SOAR.kicad_sch  camtest.py  sdkconfig.defaults  sdkconfig.defaults.esp32s3  sdkconfig.defaults.old  soar_image_grab.py
components/core/crazyflie/modules/src/: crtp_commander_generic.c
components/drivers/general/wifi/: CMakeLists.txt
components/drivers/i2c_bus/: i2c_drv.c
components/esp32-camera-master/driver/: sccb.c
esp-drone/: README.md
esp-drone/main/: ESPCAM.c  Kconfig.projbuild  main.c
main/: CMakeLists.txt  ESPCAM.c  ESPCAM.h  ESPWEB.c  ESPWEB.h  Kconfig.projbuild  idf_component.yml  main.c
